SERVER-53991 donorAbortMigration should not try to abort migration after the donor has written commit decision